@@ -4,20 +4,17 @@ package com.sensor.app.sensor_app_movil.controller;
 import com.sensor.app.sensor_app_movil.dto.device.AddObserverRequest;
 import com.sensor.app.sensor_app_movil.dto.device.LinkDeviceRequest;
 import com.sensor.app.sensor_app_movil.dto.device.OwnDevicesResponse;
-import com.sensor.app.sensor_app_movil.entity.Device;
 import com.sensor.app.sensor_app_movil.mappers.DeviceMapper;
 import com.sensor.app.sensor_app_movil.service.IDeviceService;
 import jakarta.validation.Valid;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/device")
@@ -25,7 +22,6 @@ import java.util.stream.Collectors;
 public class DeviceController {
 
 
-    private final static Logger logger = LoggerFactory.getLogger(DeviceController.class);
 
     @Autowired
     private IDeviceService deviceService;
@@ -33,63 +29,63 @@ public class DeviceController {
     @Autowired
     private DeviceMapper deviceMapper;
 
-    @GetMapping("/own")
+    @GetMapping(path = "/own", produces = MediaType.APPLICATION_JSON_VALUE)
     @PreAuthorize("isAuthenticated()")
     public ResponseEntity<List<OwnDevicesResponse>> getDeviceOwn(@RequestParam(name = "page", defaultValue = "0") int page) {
-       List<OwnDevicesResponse> odr = this.deviceService.getAllByFkUser(page).stream().map(device -> deviceMapper.toOwnDevicesResponse(device)).collect(Collectors.toList());
+       List<OwnDevicesResponse> odr = this.deviceService.getAllByFkUser(page).stream().map(device -> deviceMapper.toOwnDevicesResponse(device)).toList();
         return new ResponseEntity<>(odr, HttpStatus.OK);
     }
 
-    @PutMapping("/link-user")
+    @PutMapping(path ="/link-user", consumes = MediaType.APPLICATION_JSON_VALUE)
     @PreAuthorize("isAuthenticated()")
-    public ResponseEntity linkUser(@RequestBody @Valid LinkDeviceRequest ldr) {
+    public ResponseEntity<Void> linkUser(@RequestBody @Valid LinkDeviceRequest ldr) {
         this.deviceService.linkUser(ldr.getCode(), ldr.getPassword());
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
 
-    @PostMapping("/add-observer")
+    @PostMapping(path ="/add-observer", consumes = MediaType.APPLICATION_JSON_VALUE)
     @PreAuthorize("isAuthenticated()")
-    public ResponseEntity addObserver(@RequestBody @Valid AddObserverRequest addObserverRequest) {
+    public ResponseEntity<Void> addObserver(@RequestBody @Valid AddObserverRequest addObserverRequest) {
 
         this.deviceService.addObserver(addObserverRequest.getEmail(), addObserverRequest.getDeviceCode());
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
     @GetMapping(path = "/confirm-invitation")
-    public ResponseEntity confirmInvitation(@RequestParam("token") String token) {
+    public ResponseEntity<Void> confirmInvitation(@RequestParam("token") String token) {
         this.deviceService.confirmationInvitation(token);
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
-    @DeleteMapping("/{deviceCode}/unlink-observer")
+    @DeleteMapping(path ="/{deviceCode}/unlink-observer")
     @PreAuthorize("isAuthenticated()")
-    public ResponseEntity unlinkObserver(@PathVariable("deviceCode") String deviceCode ) {
+    public ResponseEntity<Void>  unlinkObserver(@PathVariable("deviceCode") String deviceCode ) {
         this.deviceService.unlinkObserver(deviceCode);
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
-    @DeleteMapping("/{deviceCode}/user/{email}")
+    @DeleteMapping(path ="/{deviceCode}/user/{email}")
     @PreAuthorize("isAuthenticated()")
-    public ResponseEntity unlinkObserver(@PathVariable("deviceCode") String deviceCode,@PathVariable("email") String email ) {
+    public ResponseEntity<Void>  deleteObserver(@PathVariable("deviceCode") String deviceCode,@PathVariable("email") String email ) {
         this.deviceService.deleteObserver(deviceCode, email);
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
 
-    @DeleteMapping("/{deviceCode}/clear-history")
+    @DeleteMapping(path = "/{deviceCode}/clear-history")
     @PreAuthorize("isAuthenticated()")
-    public ResponseEntity clearHistory(@PathVariable("deviceCode") String deviceCode ) {
+    public ResponseEntity<Void> clearHistory(@PathVariable("deviceCode") String deviceCode ) {
         this.deviceService.clearHistory(deviceCode);
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
 
-    @DeleteMapping("/{deviceCode}/delete-owner")
+    @DeleteMapping(path = "/{deviceCode}/delete-owner")
     @PreAuthorize("isAuthenticated()")
-    public ResponseEntity deleteDeviceFromUser(@PathVariable("deviceCode") String deviceCode ) {
+    public ResponseEntity<Void>  deleteDeviceFromUser(@PathVariable("deviceCode") String deviceCode ) {
         this.deviceService.deleteDeviceFromUser(deviceCode);
-        return new ResponseEntity(HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
 
